--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jade": "~1.11.0",
     "moment": "^2.22.2",
     "morgan": "~1.9.0",
+    "orientdb-rest-api": "^1.1.2",
     "orientjs": "^3.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
